# Promptlab

./: .gitignore  README.md  promptlab.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: prompt-tests.yml
quick_test/: promptlab.yaml
quick_test/tests/: quick_roleplay.yaml
src/promptlab/: __init__.py  __main__.py
src/promptlab/cli/: __init__.py  main.py
src/promptlab/core/: __init__.py  assertions.py  baseline.py  bsp_validator.py  models.py  parser.py  runner.py
src/promptlab/llm_council/council/: council.py
src/promptlab/llm_council/llm_runner/: __init__.py  runner.py
src/promptlab/llm_council/pipeline/: __init__.py  pipeline.py
src/promptlab/mcp_servers/: __init__.py
src/promptlab/mcp_servers/council/: __init__.py  council.py
src/promptlab/orchestrators/: assertions.py  baseline.py  bsp_validator.py  models.py  parser.py  runner.py
src/promptlab/utils/: __init__.py  auto_test_generator.py  bsp_linter.py  bsp_optimizer.py  config.py  data_processor.py  datasets.py  git_integration.py  guardrail.py  history.py  importers.py  model_pool.py  multi_turn.py  scraper.py  test_generator.py  training_data.py
temp/: blockchain_benchmark.yaml  machine_learning_benchmark.yaml  python_benchmark.yaml  python_programming_benchmark.yaml
test_project/.github/workflows/: prompt-tests.yml
test_project/tests/: gsm8k.yaml  mmlu_abstract_algebra.yaml  mmlu_computer_security.yaml  mmlu_machine_learning.yaml  sentiment.yaml
tests/: __init__.py  code_review.yaml  council_test.yaml  example.yaml  support_routing.yaml
(+2 files in other folders)
